--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cactus: ^1.0.0
   provider: ^6.1.1
   path_provider: ^2.1.2
+  path: ^1.9.0
   image_picker: ^1.0.7
   uuid: ^4.3.3
   shared_preferences: ^2.2.2
