--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
   image_picker: ^1.0.7
   uuid: ^4.3.3
   shared_preferences: ^2.2.2
-  # Audio recording - version must match cactus dependency
-  record: ^6.1.1
+  # Audio recording with proper WAV format for Whisper
+  flutter_recorder: ^1.1.1
   permission_handler: ^12.0.1
 
 dev_dependencies:
